big cleanup & update legacy code